Add Save & Share feature with URL sharing, named saves, QR code, and export/import
Features:
- Short URL sharing with lz-string compression (#s=hash format)
- Named saves with labels stored in localStorage (max 50)
- QR code generation for easy mobile sharing
- Export/Import JSON for backup and transfer
- Full state capture including all tab states

Technical changes:
- Lift tab states to page.tsx for centralized snapshot management
- Add snapshotCodec.ts for URL-safe compression
- Add snapshotStorage.ts for localStorage CRUD operations
- Fix decodeSnapshot import to use correct lz-string version
- Add refresh mechanism after JSON import

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lz-string": "^1.5.0",
     "next": "^15.1.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
