--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/lz-string": "^1.3.34",
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
