--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lz-string": "^1.5.0",
     "next": "^16.0.10",
     "qrcode.react": "^4.2.0",
