chore: update TypeScript to 5.9, add .gitignore for test files

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,19 @@ dist/
 
 # Testing
 coverage/
+tests/
+test-results/
+test-results.json/
+playwright-report/
+playwright.config.ts
+*.log
+
+# Bug reports (local only)
+BUG*.md
+*_REPORT.*
+*_SUMMARY.md
+*BUGS*.md
+*_AUDIT.md
 
 # Misc
 .DS_Store
