feat(phase-3): nâng cấp toàn diện UX/UI và tính năng thuế
Phase 3 bao gồm:

Track 1: Tax Optimization Tips Enhanced
- Thêm priority level "critical" với hiệu ứng pulse
- 4 tip generators mới: yearEndSpending, dividendVsSalary, governmentBond, voluntaryPensionMax

Track 2: UI/UX Improvements
- Dark mode hoàn chỉnh với ThemeContext và ThemeToggle
- PWA offline support với service worker, cache strategies
- Keyboard shortcuts: ?, 1-9, Ctrl+S, Ctrl+Shift+D, Escape
- Mobile experience: safe areas, touch targets, animations

Track 3: Tính năng thuế mới
- Tax Planning Simulator: What-If analysis với 4 scenarios
- Inheritance & Gift Tax Calculator: tính thuế thừa kế/quà tặng

Files mới: 18 files
Files sửa: 10 files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,5 +30,34 @@
   "lang": "vi",
   "dir": "ltr",
   "scope": "/",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "id": "thue-2026-pwa",
+  "screenshots": [
+    {
+      "src": "/og-image.png",
+      "type": "image/png",
+      "sizes": "1200x630",
+      "form_factor": "wide",
+      "label": "Giao diện tính thuế TNCN"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Tính thuế TNCN",
+      "short_name": "Tính thuế",
+      "description": "Mở công cụ tính thuế TNCN",
+      "url": "/tinh-thue",
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ],
+  "related_applications": [],
+  "handle_links": "preferred",
+  "launch_handler": {
+    "client_mode": ["navigate-existing", "auto"]
+  }
 }
